--- a/src/app/auth/register/register.html
+++ b/src/app/auth/register/register.html
@@ -11,6 +11,12 @@
           placeholder="Full Name"
           required
         />
+        <small
+          *ngIf="registerForm.get('name')?.touched 
+        && registerForm.get('name')?.hasError('required')"
+        >
+          Name is required
+        </small>
       </div>
 
       <div class="form-group">
@@ -20,6 +26,18 @@
           placeholder="Email Address"
           required
         />
+        <small
+          *ngIf="registerForm.get('email')?.touched 
+        && registerForm.get('email')?.hasError('required')"
+        >
+          Email is required
+        </small>
+        <small
+          *ngIf="registerForm.get('email')?.touched 
+        && registerForm.get('email')?.hasError('email')"
+        >
+          Please enter a valid email
+        </small>
       </div>
 
       <div class="form-group">
@@ -29,6 +47,12 @@
           placeholder="Mobile Number"
           required
         />
+        <small
+          *ngIf="registerForm.get('mobile')?.touched 
+        && registerForm.get('mobile')?.hasError('required')"
+        >
+          Mobile number is required
+        </small>
       </div>
 
       <div class="form-group">
@@ -38,6 +62,18 @@
           placeholder="Password"
           required
         />
+        <small
+          *ngIf="registerForm.get('password')?.touched 
+        && registerForm.get('password')?.hasError('required')"
+        >
+          Password is required
+        </small>
+        <small
+          *ngIf="registerForm.get('password')?.touched 
+        && registerForm.get('password')?.hasError('minlength')"
+        >
+          Password must be at least 6 characters
+        </small>
       </div>
 
       <button
