feat: implement login functionality

--- a/src/app/auth/login/login.html
+++ b/src/app/auth/login/login.html
@@ -15,7 +15,7 @@
 
       <div class="form-group">
         <input
-          type="text"
+          type="password"
           formControlName="password"
           placeholder="Password"
           required
